# geometry

./: README.md  pyproject.toml
.config/: Makefile
.github/workflows/: wf.yml
geometry/: rectangle.py  trigonometry.py
src/: haversine.py  rectangle.py
test/: test_rectangle.py  test_trigonometry.py
