[tool.poetry]
name = "geometry"
version = "0.0.1"
description = "Geometrical calculation formulas"
authors = ["Gustav Rasmussen"]
license = "MIT"
readme = "README.md"
packages = [{include = "geometry"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.5"
numpy = "2.3.2"
# pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"
mypy = "^1.16.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
