[tool.poetry]
name = "geometry"
version = "0.0.1"
description = "Geometrical calculation formulas"
authors = ["Gustav Rasmussen"]
license = "MIT"
readme = "README.md"
packages = [{include = "geometry"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.6"
numpy = "2.3.3"
# pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.3"
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
