[tool.poetry]
name = "geometry"
version = "0.0.1"
description = "Geometrical calculation formulas"
authors = ["Gustav Rasmussen"]
license = "MIT"
readme = "README.md"
packages = [{include = "geometry"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.7"
numpy = "2.3.4"
# pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.7"
mypy = "^1.18.2"
pytest = "^8.4.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
